fix gap2

--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -26,7 +26,7 @@
     flex-direction: column;
     align-items: center;
     padding-top: 10px;
-    gap: 15vw;
+    gap: 10vw;
   }
 
   &__vector {
